[project]
name = "hydiapy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
  "face-recognition>=1.3.0",
  "openfhe>=1.4.2.0.24.4",
  "setuptools>=80.9.0",
]

[tool.ruff]
line-length = 140

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]
